# causica

./: .gitignore  .pre-commit-config.yaml  Dockerfile  NOTICE  README.md  environment.yml  pyproject.toml
research_experiments/avid/latent_diffusion/: README.md  pyproject.toml
research_experiments/avid/latent_diffusion/configs/eval/: act_cond_diffusion_145M.yaml  avid_145M.yaml  control_net_170M.yaml  control_net_full.yaml  dynamicrafter_pretrained.yaml  full_finetune.yaml  poe_145M.yaml
research_experiments/avid/latent_diffusion/configs/train/: act_cond_diffusion_11M.yaml  act_cond_diffusion_145M.yaml  act_cond_diffusion_34M.yaml  dynamicrafter_512.yaml  dynamicrafter_512_action_finetune.yaml
research_experiments/avid/latent_diffusion/configs/train/avid/: avid_11M.yaml  avid_145M.yaml  avid_34M.yaml
research_experiments/avid/latent_diffusion/configs/train/classifier/: categorical_classifier_for_guidance.yaml  mse_predictor_for_metrics.yaml
research_experiments/avid/latent_diffusion/configs/train/control_net/: act_control.yaml  act_control_lite_10M.yaml  act_control_lite_170M.yaml  act_control_lite_38M.yaml  control_net.yaml  control_net_lite_10M.yaml  control_net_lite_170M.yaml  control_net_lite_38M.yaml  dynamicrafter_512.yaml
research_experiments/avid/latent_diffusion/libs/dynamicrafter/: setup.py
research_experiments/avid/latent_diffusion/libs/dynamicrafter/lvdm/: basics.py  common.py  distributions.py  ema.py
research_experiments/avid/latent_diffusion/libs/octo/: HEAD  setup.py
research_experiments/avid/latent_diffusion/scripts/: train.sh  train_avid.py  train_classifier.py  train_control_net.py  train_diffusion.py
research_experiments/avid/latent_diffusion/scripts/eval/: eval_avid.py  eval_controlnet.py  eval_diffusion.py  eval_mixed_diffusion.py
research_experiments/avid/latent_diffusion/src/ldwma/datasets/: droid.py  rtx.py  utils.py
research_experiments/avid/latent_diffusion/src/ldwma/models/: avid.py  control_net.py
research_experiments/avid/pixel_diffusion/: README.md  pyproject.toml
research_experiments/avid/pixel_diffusion/config/: act_cond_model_22M_coinrun_500lvl.yaml  act_cond_model_22M_coinrun_500lvl_cfg.yaml  act_cond_model_71M_coinrun_500lvl.yaml  act_cond_model_71M_coinrun_500lvl_cfg.yaml  base_video_config.yaml  full_finetune_with_act_500lvl.yaml  pretrained_model.yaml
research_experiments/avid/pixel_diffusion/config/avid/: avid_22M_coinrun_500lvl.yaml  avid_71M_coinrun_500lvl.yaml  base_avid_config.yaml
research_experiments/avid/pixel_diffusion/config/classifier/: base_classifier_config.yaml  classifier_for_eval.yaml  classifier_for_guidance_500lvl.yaml
research_experiments/avid/pixel_diffusion/config/control_net/: base_controlnet_config.yaml  controlnet_22M_coinrun_500lvl.yaml  controlnet_full_coinrun_500lvl.yaml
research_experiments/avid/pixel_diffusion/config/eval/: act_cond_model_22M_coinrun_500lvl.yaml  act_cond_model_71M_coinrun_500lvl.yaml  avid_22M_coinrun_500lvl.yaml  avid_71M_coinrun_500lvl.yaml  controlnet_22M_coinrun_500lvl.yaml  controlnet_full_coinrun_500lvl.yaml  full_finetune_coinrun_500lvl.yaml  pretrained_model.yaml
research_experiments/avid/pixel_diffusion/scripts/: train_avid.py  train_classifier.py  train_control_net.py  train_diffusion.py
research_experiments/avid/pixel_diffusion/scripts/datasets/: sample_coinrun_datasets.sh  sample_procgen_data.py  sample_procgen_dataset.sh
research_experiments/avid/pixel_diffusion/scripts/eval/: eval_avid.py  eval_controlnet.py  eval_diffusion.py
research_experiments/avid/pixel_diffusion/src/dwma/: setup.py
research_experiments/avid/pixel_diffusion/src/dwma/datasets/: file_dataset.py  procgen_dataset.py  procgen_sampler.py
research_experiments/avid/pixel_diffusion/src/dwma/models/: avid.py  classifier.py  classifier_guided_diffusion.py  control_net.py  diffusion_control_net.py  (+1 more)
research_experiments/cond_fip/: README.md  pyproject.toml
research_experiments/cond_fip/src/cond_fip/: entrypoint_test.py
research_experiments/cond_fip/src/cond_fip/config/: cond_fip_inference.yaml  cond_fip_training.yaml  encoder_training.yaml  numpy_tensor_data_module.yaml  synthetic_data_module.yaml
research_experiments/cond_fip/src/cond_fip/launchers/: inference_cond_fip.py  train_cond_fip.py  train_encoder.py
research_experiments/cond_fip/src/cond_fip/models/: amortized_models.py  decoder_layer.py
research_experiments/cond_fip/src/cond_fip/tasks/: cond_fip_inference.py  cond_fip_training.py  encoder_training.py
research_experiments/fip/: README.md  pyproject.toml
research_experiments/fip/src/fip/: entrypoint.py  my_cli.py
research_experiments/fip/src/fip/config/: numpy_tensor_data_module.yaml  synthetic_data_module.yaml
research_experiments/fip/src/fip/data_generation/: README.md  avici_data.py  avici_data.sh  config_data.py  csuite_data.py  csuite_data.sh  normalizing_flow_data.py  normalizing_flow_data.sh  sem_factory.py
research_experiments/fip/src/fip/data_modules/: numpy_tensor_data_module.py  synthetic_data_module.py
research_experiments/fip/src/fip/launchers/: README.md  amortization.py  basic_commands.py  scm_learning_with_ground_truth.py  scm_learning_with_predicted_truth.py
research_experiments/fip/src/fip/methods/: base_method_module.py  jacobian.py  scm_learning.py
research_experiments/fip/src/fip/models/: avici_models.py  causal_models.py
research_experiments/fip/src/fip/task_utils/: leaf_functions.py  learnable_loss.py
research_experiments/scotch/: README.md  pyproject.toml
research_experiments/scotch/src/scotch/dataset_generation/: generate_and_save_data.py  generate_trajectories.py
research_experiments/scotch/src/scotch/experiments/: dream3.py  lorenz.py  netsim.py  yeast.py
research_experiments/scotch/src/scotch/latent_learning/: functional_relationship.py  graph_distribution.py  scotch_data_module.py  scotch_module.py  scotch_nns.py
research_experiments/scotch/src/scotch/scotch_utils/: graph_metrics.py  scotch_utils.py
research_experiments/scotch/src/scotch/sdes/: scotch_sdes.py  sde_modules.py  sdes_core.py
(+617 files in other folders)
