[tool.poetry]
name = "causica"
version = "0.2.0"
description = ""
readme = "README.md"
authors = []
packages = [
    { include = "causica", from = "src" },
    { include = "examples", from = "." },
]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
azureml-mlflow = "^1.46.0"
mlflow = "^2.0.0"
numpy = "^1.22.4"
pandas = "^1.4.2"
tensorboard = "^2.9.0"
pytorch-lightning = {version = "^1.7.7", extras= ["extra"]}
dataclasses-json = "^0.5.7"
types-PyYAML = "^6.0.12.2"
tensordict = "^0.1.0"
torch = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
