[tool.poetry]
name = "causica"
version = "0.3.4"
description = ""
readme = "README.md"
authors = []
packages = [
    { include = "causica", from = "src" }
]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
azureml-mlflow = "^1.46.0"
mlflow = "^2.0.0"
numpy = "^1.22.4"
pandas = "^1.4.2"
tensorboard = "^2.9.0"
pytorch-lightning = {version = "^1.9.0", extras= ["extra"]}
jsonargparse = "<4.21.0"  # 4.21.0 breaks lightning cli
dataclasses-json = "^0.5.7"
types-PyYAML = "^6.0.12.2"
tensordict = "^0.1.0"
torch = "2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
