[tool.poetry]
name = "fip"
version = "0.1.0"
description = "A Fixed-Point Approach for Causal Generative Modeling"
readme = "README.md"
authors = ["Meyer Scetbon", "Joel Jennings", "Agrin Hilmkil", "Cheng Zhang", "Chao Ma"]
packages = [
    {include = "fip", from = "src"}
]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
causica = "0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
