[tool.poetry]
name = "fip"
version = "0.1.1"
description = "A Fixed-Point Approach for Causal Generative Modeling"
readme = "README.md"
authors = ["Meyer Scetbon", "Joel Jennings", "Agrin Hilmkil", "Cheng Zhang", "Chao Ma"]
packages = [
    {include = "fip", from = "src"}
]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
causica = "0.4.2"

[tool.poetry.group.dev.dependencies]
black = {version="^22.6.0", extras=["jupyter"]}
isort =  "^5.10.1"
jupyter = "^1.0.0"
jupytext = "^1.13.8"
mypy = "^1.0.0"
pre-commit = "^2.19.0"
pylint = "^2.14.4"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
seaborn = "^0.12.2"
types-python-dateutil = "^2.8.18"
types-requests = "^2.31.0.10"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
py_version = 310
known_first_party = ["fip"]
# Keep import sorts by code jupytext percent block (https://github.com/PyCQA/isort/issues/1338)
treat_comments_as_code = ["# %%"]