[tool.poetry]
name = "scotch"
version = "0.1.0"
description = "Neural structure learning with stochastic differential equations"
readme = "README.md"
authors = ["Benjie Wang", "Joel Jennings", "Wenbo Gong"]
packages = [
    { include = "scotch", from = "src" }
]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
causica = "0.3.4"
torchsde = "0.2.5"
isort =  "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
