[tool.poetry]
name = "dwma"
version = "0.1.0"
description = ""
readme = "README.md"
authors = []

[tool.poetry.dependencies]
python = "~3.10"
torch = "2.0.0"
numpy = "^1.22.4"
pytorch-lightning = {version = "^2.1.0", extras= ["extra"]}
wandb = "^0.16.2"
azureml-fsspec = "^1.2.0"
procgen = "0.10.7"
tqdm = "*"
einops = "^0.8.0"
ema-pytorch = "^0.4.2"
accelerate = "*"
moviepy = "^1.0.3"
imageio = "^2.34.1"
einops-exts = "*"
rotary-embedding-torch = "*"
cd-fvd = "^0.1.0.dev1"
pytorch-fid = "^0.3.0"
avid_utils = { path = "../libs/avid_utils", develop = true}

[tool.poetry.group.dev.dependencies]
black = {version="^22.6.0", extras=["jupyter"]}
isort =  "^5.10.1"
jupyter = "^1.0.0"
jupytext = "^1.13.8"
mypy = "^1.0.0"
pre-commit = "^2.19.0"
pylint = "^2.14.4"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
seaborn = "^0.12.2"
types-python-dateutil = "^2.8.18"
types-requests = "^2.31.0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
py_version = 310
known_first_party = ["dwma"]
treat_comments_as_code = ["# %%"]

[tool.mypy]
files = []